Add Movie Flicks app

--- a/app/index.html
+++ b/app/index.html
@@ -212,11 +212,11 @@
                                             <i class="fa fa-plus fa-3x"></i>
                                         </div>
                                     </div>
-                                    <img src="images/portfolio/tipper.png" class="img-responsive" alt="Tipper iOS App Screenshot" style="max-height:260px;margin:auto">
+                                    <img src="images/portfolio/movieflicks.png" class="img-responsive" alt="Movie Flicks iOS App Screenshot" style="max-height:260px;margin:auto">
                                 </a>
                                 <div class="portfolio-caption">
-                                    <h4>Tipper iOS App</h4>
-                                    <p class="text-muted">Tip calculator app with modern design</p>
+                                    <h4>Movie Flicks iOS App</h4>
+                                    <p class="text-muted">Find out now playing movies</p>
                                 </div>
                             </div>
                             <div class="col-md-4 col-sm-6 portfolio-item">
@@ -259,6 +259,20 @@
                                 <div class="portfolio-caption">
                                     <h4>Renaissance Pirates</h4>
                                     <p class="text-muted">Viral online game built with PHP</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4 col-sm-6 portfolio-item">
+                                <a href="#portfolioModal7" class="portfolio-link" data-toggle="modal">
+                                    <div class="portfolio-hover">
+                                        <div class="portfolio-hover-content">
+                                            <i class="fa fa-plus fa-3x"></i>
+                                        </div>
+                                    </div>
+                                    <img src="images/portfolio/tipper.png" class="img-responsive" alt="Tipper iOS App Screenshot" style="max-height:260px;margin:auto">
+                                </a>
+                                <div class="portfolio-caption">
+                                    <h4>Tipper iOS App</h4>
+                                    <p class="text-muted">Tip calculator app with modern design</p>
                                 </div>
                             </div>
                             <div class="col-md-4 col-sm-6 portfolio-item">
@@ -539,12 +553,11 @@
                             <div class="row">
                                 <div class="col-lg-8 col-lg-offset-2">
                                     <div class="modal-body">
-                                        <h2>Tipper iOS App</h2>
-                                        <p class="item-intro text-muted">Tip calculator app with modern design</p>
-                                        <img class="images-responsive img-centered" src="http://i.imgur.com/upvOUf6.gif" alt="Video demo of Tipper Calculator iOS App">
-                                        <p><a href="https://github.com/audip/tipper">Tipper</a> is an iOS App built on Apple's iOS 9 SDK and Xcode 7 implmenting the modern, playful and open-source Swift language to quickly calculate tip for the user. Tipper
-                                            is unique in its right as it persists your data and settings on every launch and clear itself when unused for over 10 min saving you memory and time.</p>
-                                        <p><a href="https://github.com/audip/tipper">Tipper </a>is designed with modern theme in mind and looks crisp on every screen.</p>
+                                        <h2>Movie Flicks iOS App</h2>
+                                        <p class="item-intro text-muted">Find out what movies are now playing in theatres</p>
+                                        <img class="images-responsive img-centered" src="http://i.imgur.com/jlGLroa.gif" alt="Video demo of Movie Flicks iOS App">
+                                        <p><a href="https://github.com/audip/MovieFlicks">Movie Flicks</a> is an iOS App built on Apple's iOS 9 SDK and Xcode 7 implmenting the modern, playful and open-source Swift language to display information about what movies are currently playing, their ratings, summary. The app has built-in search functionality across popular, now playing, top rated & upcoming movies.</p>
+                                        <p><a href="https://github.com/audip/MovieFlicks">Movie Flicks </a>is designed with colours in mind and is crisp in looks.</p>
                                         <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                                     </div>
                                 </div>
@@ -660,6 +673,32 @@
                                         <p>Built at CodeRed hackathon in November 2015, <a href="buymegroc/">BuyMeGroc</a> was designed as a web app to simplify the mundane task of Grocery Shopping and integrated Walmart Labs' API to fetch and display real
                                             time product details. The interface would allow you to post items you need and items you can pick up for others, ensuring you to save time and money.</p>
                                         <p>Built on PHP, JSON data and Walmart's API to scale the app. Code can be viewed at <a href="http://github.com/audip/BuyMeGroc">BuyMeGroc Github</a>.</p>
+                                        <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Portfolio Modal 7 -->
+                <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-hidden="true">
+                    <div class="modal-content">
+                        <div class="close-modal" data-dismiss="modal">
+                            <div class="lr">
+                                <div class="rl">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-8 col-lg-offset-2">
+                                    <div class="modal-body">
+                                        <h2>Tipper iOS App</h2>
+                                        <p class="item-intro text-muted">Tip calculator app with modern design</p>
+                                        <img class="images-responsive img-centered" src="http://i.imgur.com/upvOUf6.gif" alt="Video demo of Tipper Calculator iOS App">
+                                        <p><a href="https://github.com/audip/tipper">Tipper</a> is an iOS App built on Apple's iOS 9 SDK and Xcode 7 implmenting the modern, playful and open-source Swift language to quickly calculate tip for the user. Tipper
+                                            is unique in its right as it persists your data and settings on every launch and clear itself when unused for over 10 min saving you memory and time.</p>
+                                        <p><a href="https://github.com/audip/tipper">Tipper </a>is designed with modern theme in mind and looks crisp on every screen.</p>
                                         <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                                     </div>
                                 </div>
