--- a/app/index.html
+++ b/app/index.html
@@ -442,7 +442,7 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-12">
-                                <form name="sentMessage" id="contactForm" method="post">
+                                <!-- <form name="sentMessage" id="contactForm" method="post">
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group">
@@ -471,7 +471,10 @@
                                             <button type="submit" class="btn btn-xl">Send Message</button>
                                         </div>
                                     </div>
-                                </form>
+                                </form> -->
+                                <h4 style="color:#fff;text-align:center;font-style:small-caps">
+                                    Connect with me via email at contact@adityapurandare.com
+                                </h4>
                             </div>
                         </div>
                     </div>
@@ -710,6 +713,15 @@
         </div>
     </div>
     </div>
+
+    <script>
+        $(document).ready(function(){
+            $('#contactForm').submit(function(e){
+                e.preventDefault();
+
+            });
+        });
+    </script>
 
     <!-- jQuery -->
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
