Add blog section

--- a/app/index.html
+++ b/app/index.html
@@ -120,6 +120,10 @@
                                 <li>
                                     <a class="page-scroll" href="#contact"><i class="fa fa-envelope"></i> Contact</a>
                                 </li>
+				<li>
+                                    <a class="page-scroll" href="http://blog.adityapurandare.com"><i class="fa fa-rss-square"></i> Blog</a>
+                                </li>
+
                             </ul>
                         </div>
                         <!-- /.navbar-collapse -->
