Removes skill section

--- a/app/index.html
+++ b/app/index.html
@@ -114,9 +114,9 @@
                                 <li>
                                     <a class="page-scroll" href="#about"><i class="fa fa-lg fa-user"></i> About</a>
                                 </li>
-                                <li>
+                                <!-- <li>
                                     <a class="page-scroll" href="#team"><i class="fa fa-university"></i> Skills</a>
-                                </li>
+                                </li> -->
                                 <li>
                                     <a class="page-scroll" href="#contact"><i class="fa fa-envelope"></i> Contact</a>
                                 </li>
@@ -248,7 +248,7 @@
                                 </a>
                                 <div class="portfolio-caption">
                                     <h4>Voice-navigated Parrot drone</h4>
-                                    <p class="text-muted">Intelligent Watson based Node.js App</p>
+                                    <p class="text-muted">Intelligent IBM Watson based JS App</p>
                                 </div>
                             </div>
                             <div class="col-md-4 col-sm-6 portfolio-item">
@@ -365,8 +365,7 @@
                                                 <h4 class="subheading">Today & Beyond</h4>
                                             </div>
                                             <div class="timeline-body">
-                                                <p class="text-muted">I keep taking part in Hackathons & Coding Challenges to keep myself abreast with the latest programming paradigms. Love reading tech news on TechCrunch & The Verge. Presently, enrolled in CodePath's iOS
-                                                    Development course in Spring 2016. </p>
+                                                <p class="text-muted">I keep taking part in Hackathons & Coding Challenges to keep myself abreast with the latest programming paradigms. Love reading tech news on TechCrunch & The Verge.</p>
                                             </div>
                                         </div>
                                     </li>
@@ -383,8 +382,8 @@
                     </div>
                 </section>
 
-                <!-- Team Section -->
-                <section id="team" class="bg-light-gray">
+                <!-- Skills Section -->
+                <!-- <section id="team" class="bg-light-gray">
                     <div class="container">
                         <div class="row">
                             <div class="col-lg-12 text-center">
@@ -405,9 +404,9 @@
                             </div>
                         </div>
                     </div>
-                </section>
+                </section> -->
 
-                <!-- Clients Aside -->
+                <!-- Languages Known-->
                 <aside class="clients">
                     <div class="container">
                         <div class="row">
