Remove ToS and privacy policy links

--- a/app/index.html
+++ b/app/index.html
@@ -503,9 +503,7 @@
                             </div>
                             <div class="col-md-4">
                                 <ul class="list-inline quicklinks">
-                                    <li><a href="#">Privacy Policy</a>
-                                    </li>
-                                    <li><a href="#">Terms of Use</a>
+                                    <li><a href="mailto:contact@adityapurandare.com">Email me</a>
                                     </li>
                                 </ul>
                             </div>
